--- a/scripts/install
+++ b/scripts/install
@@ -54,7 +54,7 @@ fi
 
 # Untar, copy it
 sudo tar -xvf /tmp/teamspeak3server.tar.bz2 -C /tmp/
-sudo cp -a /tmp/teamspeak3-serveur_linux_$platform/. $final_path
+sudo cp -a /tmp/teamspeak3server.tar.bz2/. $final_path
 
 # Create configuration file
 sudo cp ../config/teamspeak3_server.ini $final_path/teamspeak3_server.ini
