--- a/scripts/install
+++ b/scripts/install
@@ -68,7 +68,7 @@ sudo yunohost firewall allow TCP 10011
 sudo yunohost firewall allow TCP 30033
 
 # Enable and start service
-sudo cp ../config/teamspeak3_server.service /lib/systemd/system/$app.service
+sudo cp ../conf/teamspeak3_server.service /lib/systemd/system/$app.service
 sudo systemctl daemon-reload
 sudo systemctl enable $app.service
 sudo systemctl start $app.service
